--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,10 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:19.1+"
+    compile "com.android.support:appcompat-v7:21.0.2"
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 21
+    buildToolsVersion '21.1.1'
 }
